--- a/NuxtDocs/CoreEssentials/DirectoryStructure.html
+++ b/NuxtDocs/CoreEssentials/DirectoryStructure.html
@@ -10,7 +10,7 @@
     <link rel="modulepreload" href="/chexDocs/assets/NuxtDocs_CoreEssentials_DirectoryStructure.md.872ba814.lean.js">
     
     <meta name="theme-color" content="#42b983">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/chexDocs/favicon.ico">
   <script id="check-dark-light">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
   </head>
   <body>
